refactor: day 02 (class)