@@ -1,17 +1,10 @@
 package software.aoc.day02.a;
 
 import software.aoc.day02.Range;
-
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class GiftShopDatabase {
-    private final List<Range> ranges;
-
-    private GiftShopDatabase(List<Range> ranges) {
-        this.ranges = ranges;
-    }
+public record GiftShopDatabase(List<Range> ranges) {
 
     public static GiftShopDatabase from(String rawRanges) {
         if (rawRanges == null || rawRanges.isBlank()) {
@@ -20,19 +13,19 @@ public class GiftShopDatabase {
 
         List<Range> parsedRanges = Arrays.stream(rawRanges.split(","))
                 .map(Range::from)
-                .collect(Collectors.collectingAndThen(Collectors.toList(), List::copyOf));
+                .toList();
 
         return new GiftShopDatabase(parsedRanges);
     }
 
     public long sumInvalidIds() {
         return ranges.stream()
-                .flatMapToLong(Range::expandToSequence)
+                .flatMapToLong(Range::stream)
                 .filter(GiftShopDatabase::isTwiceRepeatedPattern)
                 .sum();
     }
 
-    public static boolean isTwiceRepeatedPattern(long id) {
+    private static boolean isTwiceRepeatedPattern(long id) {
         String idString = Long.toString(id);
         int length = idString.length();
 
@@ -41,9 +34,6 @@ public class GiftShopDatabase {
         }
 
         int mid = length / 2;
-        String firstHalf = idString.substring(0, mid);
-        String secondHalf = idString.substring(mid);
-
-        return firstHalf.equals(secondHalf);
+        return idString.substring(0, mid).equals(idString.substring(mid));
     }
 }
