@@ -1,19 +1,13 @@
 package software.aoc.day02.b;
 
 import software.aoc.day02.Range;
-
 import java.util.Arrays;
 import java.util.List;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
-public class GiftShopDatabase {
-    private final List<Range> ranges;
+public record GiftShopDatabase(List<Range> ranges) {
+
     private static final Pattern SILLY_PATTERN = Pattern.compile("^(.+)\\1+$");
-
-    private GiftShopDatabase(List<Range> ranges) {
-        this.ranges = ranges;
-    }
 
     public static GiftShopDatabase from(String rawRanges) {
         if (rawRanges == null || rawRanges.isBlank()) {
@@ -22,19 +16,19 @@ public class GiftShopDatabase {
 
         List<Range> parsedRanges = Arrays.stream(rawRanges.split(","))
                 .map(Range::from)
-                .collect(Collectors.collectingAndThen(Collectors.toList(), List::copyOf));
+                .toList();
 
         return new GiftShopDatabase(parsedRanges);
     }
 
     public long sumInvalidIds() {
         return ranges.stream()
-                .flatMapToLong(Range::expandToSequence)
+                .flatMapToLong(Range::stream)
                 .filter(GiftShopDatabase::isRepeatedPattern)
                 .sum();
     }
 
-    public static boolean isRepeatedPattern(long id) {
+    private static boolean isRepeatedPattern(long id) {
         return SILLY_PATTERN.matcher(Long.toString(id)).matches();
     }
 }
